# schemas/openapi.yaml
@@ -3,7 +3,7 @@
   "info": {
     "title": "NeverLauncher API",
     "version": "1.0.0",
-    "description": "Канонический production API NeverLauncher 0.14.4. Исторические маршруты /api/v2–/api/v5 удалены и намеренно не входят в контракт."
+    "description": "Канонический production API NeverLauncher 0.14.5. Исторические маршруты /api/v2–/api/v5 удалены и намеренно не входят в контракт."
   },
   "servers": [
     {
@@ -8057,6 +8057,8 @@
             "type": "string",
             "enum": [
               "velocity",
+              "bungeecord",
+              "waterfall",
               "bukkit",
               "spigot",
               "paper",
@@ -8462,6 +8464,8 @@
             "type": "string",
             "enum": [
               "velocity",
+              "bungeecord",
+              "waterfall",
               "bukkit",
               "spigot",
               "paper",
